azure/repind-repind.old/msv/cf/search-individual/kubernetes/ite/replica-extra-options.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-individual
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: search-individual
          readinessProbe:
            httpGet:
              path: /infra/healthcheck
