azure/repind-repind.old/msv/cf/search-individual/kubernetes/ite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-individual
  labels:
    app.kubernetes.io/name: search-individual
    app.kubernetes.io/instance: search-individual-ite 
spec:
  rules:
  - host: search-individual-ite-cdm-00035-pks.rs-vlb-ite.providers.airfranceklm.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: search-individual-ite                # Must match the name used in the service resource
              port:
                number: 8080                               # Must match the port used in the service resource
